--- a/front/src/entities/cat/ui/cats-list/cats-list.module.scss
+++ b/front/src/entities/cat/ui/cats-list/cats-list.module.scss
@@ -1,3 +1,5 @@
+@use "~/styles/vars" as vars;
+
 .cats-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
@@ -10,7 +12,9 @@
     aspect-ratio: 1 / 1;
   }
 
-  &__item:hover {
-    transform: scale(1.15);
+  @media screen and (min-width: vars.$screen-mobile) {
+    &__item:hover {
+      transform: scale(1.15);
+    }
   }
 }
