--- a/front/src/shared/styles/_vars.scss
+++ b/front/src/shared/styles/_vars.scss
@@ -1,7 +1,7 @@
 $screen-desktop: 1320px;
 $screen-laptop: 1024px;
 $screen-tablet: 768px;
-$screen-mobile: 520px;
+$screen-mobile: 548px;
 
 :root {
   /* Colors */
